# Rusting

./: Cargo.toml  input  makefile  vertex_shader.glsl  watcher.sh
foobar/: Cargo.toml
foobar/src/: lib.rs
models/test/: box.toml
src/: hello.rs  load_program.rs  main.rs  main.rs.bk  toml_graphics.rs
