[package]
authors = ["Boraris"]
name = "program"
version = "0.1.0"

[dependencies]
# foobar = { path = "./foobar" }  # This is how you specify a path
argparse = "0.2.1"
byteorder = "0.5.0"
colored = "1.1.0"
env_logger = "0.3.2"
glfw = "0.3.0"
glm = "0.2.0"
glium = "0.13.5"
iron = "0.2.6"
log = "0.3.5"
rand = "0.3.14"
sfml = "0.11.2"
toml = "0.1.28"
